--- a/templates/index.html
+++ b/templates/index.html
@@ -1,69 +1,24 @@
-<!doctype html>
-<html lang="ru">
+{% extends 'base.html' %}
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>{{ title }}</title>
-</head>
-
-<body>
-<header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Закрытое образование</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01"
-                    aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarColor01">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Курсы</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Программы</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Сотрудничество</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">О проекте</a>
-                    </li>
-                </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Поиск" aria-label="Поиск">
-                    <button class="btn btn-outline-light" type="submit">Поиск</button>
-                </form>
+{% block content %}
+<div class="row">
+    {% for course in courses %}
+    <div class="col-lg-4 col-md-6">
+        <div class="card mb-3">
+            <img src="{{ course.img }}" class="card-img-top" alt="{{ course.name }}">
+            <div class="card-body">
+                <h5 class="card-title">
+                    {{ course.name }}
+                    {% if course.is_new %}
+                        <span class="badge bg-primary">Новый курс</span>
+                    {% endif %}
+                </h5>
+                <p class="card-text"><small class="text-muted">Курс уже начался</small></p>
+                <p class="card-text">{{ course.desc }}</p>
+                <a href="#" class="btn btn-primary">Подробнее</a>
             </div>
-        </div>
-    </nav>
-</header>
-<main class="my-5">
-    <div class="container">
-        <div class="row">
-            {% for course in courses %}
-            <div class="col-lg-4 col-md-6">
-                <div class="card mb-3">
-                    <img src="{{ course.img }}" class="card-img-top" alt="{{ course.name }}">
-                    <div class="card-body">
-                        <h5 class="card-title">{{ course.name }}</h5>
-                        <p class="card-text"><small class="text-muted">Курс уже начался</small></p>
-                        <p class="card-text">{{ course.desc }}</p>
-                        <a href="#" class="btn btn-primary">Подробнее</a>
-                    </div>
-                </div>
-            </div>
-            {% endfor %}
         </div>
     </div>
-</main>
-<footer></footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
-</body>
-
-</html>
+    {% endfor %}
+</div>
+{% endblock %}
