--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Закрытое образование</a>
+            <a class="navbar-brand" href="{{ url_for('homepage') }}">Закрытое образование</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01"
                     aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
