--- a/templates/course.html
+++ b/templates/course.html
@@ -1,5 +1,22 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Курс №{{ course_id }}</h1>
+    <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+        <div class="col-12 col-sm-6 col-lg-4">
+            <img src="{{ course.img }}" class="d-block mx-lg-auto img-fluid" style="width: 100%" alt="{{ course.name }}"
+                 loading="lazy">
+        </div>
+        <div class="col-12 col-sm-6 col-lg-8">
+            <h1 class="display-5 fw-bold lh-1 mb-3">{{ course.name }}</h1>
+            {% if course.is_new %}
+                <p class="display-6"><span class="badge bg-primary">Новый курс</span></p>
+            {% endif %}
+            <p>{{ course.start }} - {{ course.end }}</p>
+            <p class="lead">{{ course.desc }}</p>
+            <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+                <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Записаться на курс</button>
+                <button type="button" class="btn btn-outline-secondary btn-lg px-4">Посмотреть программу курса</button>
+            </div>
+        </div>
+    </div>
 {% endblock %}
