--- a/templates/base.html
+++ b/templates/base.html
@@ -45,6 +45,7 @@
     <div class="container">
         {% block content %}
         {% endblock %}
+        <img src="{{ url_for('static', filename='images/cat.jpg') }}" alt="Pretty cat"/>
     </div>
 </main>
 <footer></footer>
