--- a/templates/base.html
+++ b/templates/base.html
@@ -33,8 +33,8 @@
                         <a class="nav-link" href="#">О проекте</a>
                     </li>
                 </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Поиск" aria-label="Поиск">
+                <form class="d-flex" action="{{ url_for('search') }}">
+                    <input class="form-control me-2" type="search" placeholder="Поиск" name="text" aria-label="Поиск">
                     <button class="btn btn-outline-light" type="submit">Поиск</button>
                 </form>
             </div>
