--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<h1 class="mb-5">{{ page_title }}</h1>
 <div class="row">
     {% for course in courses %}
     <div class="col-lg-4 col-md-6">
