--- a/templates/404.html
+++ b/templates/404.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
+{% block title %}
+404 | {{ super() }}
+{% endblock %}
+
 {% block content %}
     <h1>Страница не найдена (ошибка 404)</h1>
     <p>
