--- a/templates/course.html
+++ b/templates/course.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
+{% block title %}
+{{ course.name }} | {{ super() }}
+{% endblock %}
+
 {% block content %}
     <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
         <div class="col-12 col-sm-6 col-lg-4">
