--- a/templates/create_course.html
+++ b/templates/create_course.html
@@ -9,29 +9,29 @@
 <form action="{{ url_for('create_course') }}" method="POST">
     <div>
         <label for="name">Название курса</label>
-        <input type="text" id="name">
+        <input type="text" id="name" name="name" required>
     </div>
     <div>
         <label for="description">Описание</label>
-        <textarea id="description" cols="30" rows="10"></textarea>
+        <textarea id="description" name="description" cols="30" rows="10" required></textarea>
     </div>
     <div>
         <label for="cover">Ссылка на обложку</label>
-        <input type="url" id="cover">
+        <input type="url" id="cover" name="cover" required>
     </div>
     <div>
         <label for="is_new">
-            <input type="checkbox" id="is_new">
+            <input type="checkbox" id="is_new" name="is_new">
             Новый курс
         </label>
     </div>
     <div>
         <label for="date_start">Дата начала</label>
-        <input type="datetime-local" id="date_start">
+        <input type="datetime-local" id="date_start" name="date_start">
     </div>
     <div>
         <label for="date_end">Дата окончания</label>
-        <input type="datetime-local" id="date_end">
+        <input type="datetime-local" id="date_end" name="date_end">
     </div>
     <div>
         <button type="submit">Добавить</button>
