--- a/templates/login.html
+++ b/templates/login.html
@@ -6,13 +6,14 @@
 
 {% block content %}
 <form action="{{ url_for('login') }}" method="POST">
+    {{ form.csrf_token }}
     <div>
-        <label for="email">Электронная почта</label>
-        <input type="email" id="email" name="email">
+        {{ form.email.label }}
+        {{ form.email }}
     </div>
     <div>
-        <label for="password">Пароль</label>
-        <input type="password" id="password" name="password">
+        {{ form.password.label }}
+        {{ form.password }}
     </div>
     <button type="submit">Войти</button>
 </form>
