Restrict access to course creation

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,9 @@
                     </li>
                     {% if current_user.is_authenticated %}
                     <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('create_course') }}">Добавить новый курс</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#">{{ current_user.nickname }}</a>
                     </li>
                     {% endif %}
