Add "Remember me" checkbox

--- a/templates/login.html
+++ b/templates/login.html
@@ -15,6 +15,10 @@
         {{ form.password.label }}
         {{ form.password }}
     </div>
+    <div>
+        {{ form.remember_me.label }}
+        {{ form.remember_me }}
+    </div>
     <button type="submit">Войти</button>
 </form>
 {% endblock %}
