--- a/templates/course.html
+++ b/templates/course.html
@@ -15,8 +15,8 @@
             {% if course.is_new %}
                 <p class="display-6"><span class="badge bg-primary">Новый курс</span></p>
             {% endif %}
-            <p>{{ course.start | datetime }} - {{ course.end | datetime }}</p>
-            <p class="lead">{{ course.desc }}</p>
+            <p>{{ course.date_start | datetime }} - {{ course.date_end | datetime }}</p>
+            <p class="lead">{{ course.description }}</p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
                 <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Записаться на курс</button>
                 <button type="button" class="btn btn-outline-secondary btn-lg px-4">Посмотреть программу курса</button>
