Fix missing covers

--- a/templates/course.html
+++ b/templates/course.html
@@ -7,7 +7,7 @@
 {% block content %}
     <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
         <div class="col-12 col-sm-6 col-lg-4">
-            <img src="{{ course.img }}" class="d-block mx-lg-auto img-fluid" style="width: 100%" alt="{{ course.name }}"
+            <img src="{{ course.cover }}" class="d-block mx-lg-auto img-fluid" style="width: 100%" alt="{{ course.name }}"
                  loading="lazy">
         </div>
         <div class="col-12 col-sm-6 col-lg-8">
