--- a/templates/course_card.html
+++ b/templates/course_card.html
@@ -1,5 +1,5 @@
 <div class="card mb-3">
-    <img src="{{ course.img }}" class="card-img-top" alt="{{ course.name }}">
+    <img src="{{ course.cover }}" class="card-img-top" alt="{{ course.name }}">
     <div class="card-body">
         <h5 class="card-title">
             {{ course.name }}
